WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27155
bug in V8Custom invokeCallback which will crash on void callbacks
https://bugs.webkit.org/show_bug.cgi?id=27155
Summary
bug in V8Custom invokeCallback which will crash on void callbacks
John Gregg
Reported
2009-07-10 13:21:02 PDT
There's an incorrect check for an empty result in V8CustomVoidCallback.cpp.
Attachments
Fix the logic for computing the return value
(1.25 KB, patch)
2009-07-10 16:05 PDT
,
John Gregg
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Gregg
Comment 1
2009-07-10 16:05:33 PDT
Created
attachment 32589
[details]
Fix the logic for computing the return value One-character fix to the logic for computing the return value.
David Levin
Comment 2
2009-07-13 02:14:27 PDT
Note for the future: Please avoid TABs (in the changelog).
David Levin
Comment 3
2009-07-13 02:34:27 PDT
Committed as
http://trac.webkit.org/changeset/45796
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug