2009-07-13  John Gregg  <johnnyg@google.com>

Reviewed by David Levin.

        Correct the logic to determine if a V8 callback returns a value.
        https://bugs.webkit.org/show_bug.cgi?id=27155

        * bindings/v8/custom/V8CustomVoidCallback.cpp:
        (WebCore::invokeCallback):
        - Don't crash if result.IsEmpty().

Canonical link: https://commits.webkit.org/37431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45796 268f45cc-cd09-0410-ab3c-d52691b4dbfc